@@ -1,3 +1,8 @@
+2017-05-03  Patrick Uiterwijk  <puiterwijk@redhat.com>
+
+	* src/utils.py: Add workaround for Koji inconsistency with proxyuser
+	* src/utils.py: Add support for koji krb_rdns configuration
+
 2017-04-30  Patrick Uiterwijk  <puiterwijk@redhat.com>
 
 	* src/bridge.py: Typecast the koji rpm size info to int
